--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,15 @@
       <li><small><a href="/jenkins/job/Stats2%20Update/lastBuild/">Last Jenkins job</a></small></li>
       <li><small><a href="https://github.com/justinasr/Stats2">GitHub</a></small></li>
       <li><small>Update time in Jenkins: </small><a href="/jenkins/job/Stats2%20Update/buildTimeTrend"><br><img style="width:180px" src="/jenkins/job/Stats2%20Update/buildTimeGraph/png"/></a></li>
+      <li>
+        <form class="form-inline" style="margin-top:10px" onsubmit="this.action='search?q='+this.q.value;">
+          <div class="form-group">
+            <label><small>Search:</small></label>
+            <input style="margin-left: 6px; margin-right: 6px; width:500px;" type="text" name="q" id="q" placeholder="Workflow, PrepID, Dataset, etc.">
+          </div>
+          <button type="submit" class="btn btn-outline-primary" value="Search">Search</button>
+        </form>
+      </li>
     </ul>
     <table class="table" style="font-size: 0.9rem">
       <tr style="font-size: 14px">
