Add link to cms unified

--- a/html/index.html
+++ b/html/index.html
@@ -52,6 +52,9 @@
                   <small>Processing string:</small> <a href="0?processing_string={{ workflow.ProcessingString }}">{{ workflow.ProcessingString }}</a><br>
               {% endif %}
               <small><a target="_blank" href="https://cmsweb.cern.ch/reqmgr2/fetch?rid={{ workflow.RequestName }}">ReqMgr2</a></small><br>
+              {% if workflow.PrepID | length > 0 %}
+                <small><a target="_blank" href="https://cms-unified.web.cern.ch/cms-unified/showlog/?search={{ workflow.PrepID }}">CMSUnifi
+              {% endif %}
               <small><a href="get_json/{{ workflow._id }}">View&nbsp;JSON</a></small><br>
           </td>
           <td>
