Fix CMSUnified link

--- a/html/index.html
+++ b/html/index.html
@@ -53,7 +53,7 @@
               {% endif %}
               <small><a target="_blank" href="https://cmsweb.cern.ch/reqmgr2/fetch?rid={{ workflow.RequestName }}">ReqMgr2</a></small><br>
               {% if workflow.PrepID | length > 0 %}
-                <small><a target="_blank" href="https://cms-unified.web.cern.ch/cms-unified/showlog/?search={{ workflow.PrepID }}">CMSUnifi
+                <small><a target="_blank" href="https://cms-unified.web.cern.ch/cms-unified/showlog/?search={{ workflow.PrepID }}">CMSUnified</a></small>
               {% endif %}
               <small><a href="get_json/{{ workflow._id }}">View&nbsp;JSON</a></small><br>
           </td>
