Update repository URL in index.html

--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
       <li><small>Total workflows in Stats<sup class="red">2</sup>:</small> {{ total_workflows }}</li>
       <li><small>Last update:</small> {{ last_stats_update | safe }}</li>
       <!--<li><small><a href="/jenkins/job/Stats2%20Update/lastBuild/">Last Jenkins job</a></small></li>-->
-      <li><small><a target="_blank" href="https://github.com/justinasr/Stats2">GitHub</a></small></li>
+      <li><small><a target="_blank" href="https://github.com/cms-PdmV/Stats2">GitHub</a></small></li>
       <!--<li><small>Update time in Jenkins: </small><a href="/jenkins/job/Stats2%20Update/buildTimeTrend"><br><img style="width:180px" src="/jenkins/job/Stats2%20Update/buildTimeGraph/png"/></a></li>-->
       <li>
         <form class="form-inline" onsubmit="this.action='search?q='+this.q.value;">
