Add authorization, update README

--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
       <li><small><a target="_blank" href="https://github.com/cms-PdmV/Stats2">GitHub</a></small></li>
       <!--<li><small>Update time in Jenkins: </small><a href="/jenkins/job/Stats2%20Update/buildTimeTrend"><br><img style="width:180px" src="/jenkins/job/Stats2%20Update/buildTimeGraph/png"/></a></li>-->
       <li>
-        <form class="form-inline" onsubmit="this.action='search?q='+this.q.value;">
+        <form class="form-inline" action="search">
           <div class="form-group">
             <label><small>Search:</small></label>
             <input style="margin-left: 6px; margin-right: 6px; width:500px;" type="text" name="q" id="q" placeholder="Workflow, PrepID, Output Dataset, etc.">
