--- a/html/index.html
+++ b/html/index.html
@@ -59,7 +59,7 @@
                 <small><a target="_blank" href="https://cms-unified.web.cern.ch/cms-unified/showlog/?search={{ workflow.PrepID }}">CMSUnified</a></small><br>
               {% endif %}
               {% if workflow.PrepID | length > 0 %}
-                <small><a target="_blank" href="https://dmytro.web.cern.ch/dmytro/cmsprodmon/workflows.php?prep_id={{ workflow.PrepID }}">Dmytro Report</a></small><br>
+                <small><a target="_blank" href="https://dmytro.web.cern.ch/dmytro/cmsprodmon/workflows.php?prep_id={{ workflow.PrepID }}">Computing status page</a></small><br>
               {% endif %}
               <small><a href="get_json/{{ workflow._id }}">View&nbsp;JSON</a></small><br>
           </td>
