Update Stats2 UI to display lumisections
1. Include new labels to display the workflow lumisections (based on the field `TotalInputLumis` from ReqMgr2) and the lumisections available for the output datasets.
2. Compute the progress based on lumisections.
3. Bugfix: For the `lumisection_update.py` module, sort the history before updating the request, it seems some parts of the code assume as invariant the ascending order of this attribute.

--- a/html/index.html
+++ b/html/index.html
@@ -40,6 +40,7 @@
               {% endif %}
               <small>Type:</small> <a href="0?type={{ workflow.RequestType }}">{{ workflow.RequestType }}</a><br>
               <small>Total events:</small> {{ workflow.TotalEvents }}<br>
+              <small>Total lumisections:</small> {{ workflow.TotalInputLumis }}<br>
               <small>Priority:</small> {{ workflow.RequestPriority }}<br>
               <small>Last update:</small> {{ workflow.LastUpdateAgo }} ago <small>({{ workflow.LastUpdate | safe }})</small><br>
               {% if workflow.FirstStatus | length > 0 %}
@@ -103,8 +104,10 @@
                     <div title="{{ dataset.Type }}, {{ dataset.CompletedPerc }}%" style="width: {{ dataset.CompletedPerc }}%;" class="bar {{dataset.Type | lower}}-bar"></div>
                   </div>
                   <small>datatier:</small> {{dataset.Datatier}},
-                  <small>completed:</small> {{dataset.CompletedPerc}}%,
+                  <small>completed (on events):</small> {{dataset.CompletedPerc}}%,
+                  <small>completed (on lumisections):</small> {{dataset.LumiCompletedPerc}}%,
                   <small>events:</small> {{dataset.Events}},
+                  <small>lumisections:</small> {{dataset.Lumis}},
                   {% if dataset.Size > 0 %}<small>size:</small> <span title="{{dataset.Size}} bytes">{{dataset.NiceSize}}</span>,{% endif %}
                   <small>type:</small> <b class="{{dataset.Type | lower}}-type">{{dataset.Type}}</b>,
                   <a target="_blank" href="https://cmsweb.cern.ch/das/request?view=list&limit=50&instance=prod%2Fglobal&input=dataset%3D{{ dataset.Name }}"><small>go to</small> DAS</a>
