Bugfix: Lumisections label on workflow page
1. The attribute `TotalInputLumis` is always taken for every workflow, regardless of the lumisection condition. This also happens for the attribute `LumiList`. Change the condition for displaying this attribute on the page, ask if the attribute `LumiList` is not empty.

--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@
                 <small>PrepID:</small> <a href="0?prepid={{ workflow.PrepID }}">{{ workflow.PrepID }}</a><br>
               {% endif %}
               <small>Type:</small> <a href="0?type={{ workflow.RequestType }}">{{ workflow.RequestType }}</a><br>
-              {% if workflow.TotalInputLumis is defined %}
+              {% if workflow.LumiList %}
                 <small>Total lumisections:</small> {{ workflow.TotalInputLumis }}<br>
               {% else %}
                 <small>Total events:</small> {{ workflow.TotalEvents }}<br>
