Retrieve ReReco workflows and include `lumisections` data (#12)
* Retrieve ReReco workflows and include `lumisections` data

1. Scan all Stats2 requests related with ReReco workflows (based on the `RequestType`).
2. Include the lumisection information available for the workflow in ReqMgr2, set the lumisection data only for the most recent event record in the history, otherwise set zero.

* Store document into Stats2 request database

1. Store the update into the database.
2. Fix the auth header format when performing the first request.

* Include `lumisections` when updating the Stats2 requests.

1. Update the `stats_update.py` script to include the `lumisection` attribute for the updated requests.
2. Bugfix: Update trigger outside function to avoid performing requests when it is not desired.

* Update Stats2 UI to display lumisections

1. Include new labels to display the workflow lumisections (based on the field `TotalInputLumis` from ReqMgr2) and the lumisections available for the output datasets.
2. Compute the progress based on lumisections.
3. Bugfix: For the `lumisection_update.py` module, sort the history before updating the request, it seems some parts of the code assume as invariant the ascending order of this attribute.

* Change the criteria to include lumisections

1. Only include them if the RequestType is ReReco and the LumiList attribute exists and it is not empty.

* Update Stats2 UI to display either lumis or events

1. Update the render data to only set the `Lumis`, `LumiCompletedPerc` and `TotalInputLumis` attributes if they are defined.
2. Update the HTML page to show only the lumisections if the last attributes are defined, otherwise just show the events.

* Change the criteria for including `lumisections`

1. Check the `TotalInputLumis` attribute is available.
2. Include more INFO messages to track lumisection inclusion.
3. Refactor some logging messages regarding to cache some entries.

* Lumisection filter

--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,11 @@
                 <small>PrepID:</small> <a href="0?prepid={{ workflow.PrepID }}">{{ workflow.PrepID }}</a><br>
               {% endif %}
               <small>Type:</small> <a href="0?type={{ workflow.RequestType }}">{{ workflow.RequestType }}</a><br>
-              <small>Total events:</small> {{ workflow.TotalEvents }}<br>
+              {% if workflow.LumiList %}
+                <small>Total lumisections:</small> {{ workflow.TotalInputLumis }}<br>
+              {% else %}
+                <small>Total events:</small> {{ workflow.TotalEvents }}<br>
+              {% endif %}
               <small>Priority:</small> {{ workflow.RequestPriority }}<br>
               <small>Last update:</small> {{ workflow.LastUpdateAgo }} ago <small>({{ workflow.LastUpdate | safe }})</small><br>
               {% if workflow.FirstStatus | length > 0 %}
@@ -99,12 +103,23 @@
             <ul>
               {% for dataset in workflow.OutputDatasets %}
                 <li>
-                  <div title="{{ dataset.Type }}, {{ dataset.CompletedPerc }}%" class="gray-bar">
-                    <div title="{{ dataset.Type }}, {{ dataset.CompletedPerc }}%" style="width: {{ dataset.CompletedPerc }}%;" class="bar {{dataset.Type | lower}}-bar"></div>
-                  </div>
+                  {% if dataset.Lumis is defined %}
+                    <div title="{{ dataset.Type }}, {{ dataset.LumiCompletedPerc }}%" class="gray-bar">
+                      <div title="{{ dataset.Type }}, {{ dataset.LumiCompletedPerc }}%" style="width: {{ dataset.LumiCompletedPerc }}%;" class="bar {{dataset.Type | lower}}-bar"></div>
+                    </div>
+                  {% else %}
+                    <div title="{{ dataset.Type }}, {{ dataset.CompletedPerc }}%" class="gray-bar">
+                      <div title="{{ dataset.Type }}, {{ dataset.CompletedPerc }}%" style="width: {{ dataset.CompletedPerc }}%;" class="bar {{dataset.Type | lower}}-bar"></div>
+                    </div>
+                  {% endif %}
                   <small>datatier:</small> {{dataset.Datatier}},
-                  <small>completed:</small> {{dataset.CompletedPerc}}%,
-                  <small>events:</small> {{dataset.Events}},
+                  {% if dataset.Lumis is defined %}
+                    <small>completed (on lumisections):</small> {{dataset.LumiCompletedPerc}}%,
+                    <small>lumisections:</small> {{dataset.Lumis}},
+                  {% else %}
+                    <small>completed (on events):</small> {{dataset.CompletedPerc}}%,  
+                    <small>events:</small> {{dataset.Events}},
+                  {% endif %}
                   {% if dataset.Size > 0 %}<small>size:</small> <span title="{{dataset.Size}} bytes">{{dataset.NiceSize}}</span>,{% endif %}
                   <small>type:</small> <b class="{{dataset.Type | lower}}-type">{{dataset.Type}}</b>,
                   <a target="_blank" href="https://cmsweb.cern.ch/das/request?view=list&limit=50&instance=prod%2Fglobal&input=dataset%3D{{ dataset.Name }}"><small>go to</small> DAS</a>
